Removed HelloWorld responses from swagger.yaml
